--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,17 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Reference Bootstrap files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-   
 
     <title>Login Page</title>
 </head>
@@ -22,7 +16,7 @@
         <div id="loginbox" style="margin-top: 50px" class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset02">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <div class="panel-title">Sign In: JDBC Authentication</div>
+                    <div class="panel-title">Employee Management System Sign In</div>
                 </div>
 
                 <div style="padding-top: 30px" class="panel-body">
@@ -30,28 +24,19 @@
                     <form th:action="@{/authenticateTheUser}" method="POST" class="form-horizontal">
                         <!-- Place for message, error , etc -->
                         <div class="form-group">
-                            <div class="col-xs-15">
-                                <div>
-                                    <!-- Check for login error -->
-                                    <div th:if="${param.error}">
-                                        <div class="alert alert alert-danger col-xs-offset-1 col-xs-10">
-                                            Invalid username and password
-                                        </div>
-                                    </div>
+                            <!-- Check for login error -->
+                            <div th:if="${param.error}" class="alert alert alert-danger col-xs-offset-1 col-xs-10">
+                                Invalid username and password
+                            </div>
 
-                                    <!-- After a successful registration -->
-                                    <div th:if="${param.signedup}">
-                                        <div class="alert alert alert-success col-xs-offset-1 col-xs-10">
-                                            Registration Successful. Please sign in.
-                                        </div>
-                                    </div>
+                            <!-- After a successful registration -->
+                            <div th:if="${param.signedup}" class="alert alert alert-success col-xs-offset-1 col-xs-10">
+                                Registration Successful. Please sign in.
+                            </div>
 
-                                    <!-- Check for logout -->
-                                    <div th:if="${param.logout}">
-                                        <div class="alert alert-success col-xs-offset-1 col-xs-10">You have been logged out.</div>
-                                    </div>
-
-                                </div>
+                            <!-- Check for logout -->
+                            <div th:if="${param.logout}" class="alert alert-success col-xs-offset-1 col-xs-10">
+                                You have been logged out. 
                             </div>
                         </div>
 
@@ -61,6 +46,7 @@
 
                             <input type="text" name="username" placeholder="username" class="form-control">
                         </div>
+
                         <!-- Password -->
                         <div style="margin-bottom:25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
@@ -68,22 +54,15 @@
                             <input type="password" name="password" placeholder="password" class="form-control">
                         </div>
                         
-                        
-
                         <!-- Login/Submit Button -->
-                        <div style="margin-top: 10px;" class="form-group">
-                            <div class="col-sm-2 controls">
-                                <button type="submit" class="btn btn-success">Login</button>
-                            </div>
-                            <div class="col-sm-2 controls">
-                                <a th:href="@{/users/showRegisterForm}"
-                                class="btn btn-info">Sign Up</a>                            </div>
+                        <div class="form-group">
+                            <button style="margin-left: 15px;width:80px;" type="submit" class="btn btn-success">Login</button>
+                            <button class="btn btn-info" style="width:80px;margin-left:10px;" type="button" th:onclick="window.location.href='/register'">
+                            <a style="color:aliceblue; text-decoration: none;">Sign Up</a>
+                            </button>
                         </div>
-
-                       
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
