--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
     <style>
         .error{
             color:red;
-            margin-bottom: 10px;;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -34,6 +34,9 @@
                             <div th:if="${param.userExists}" class="alert alert-danger col-xs-offset-1 col-xs-10">
                                 Username already exists!
                             </div>
+                            <div th:if="${param.codeNotExists}" class="alert alert-danger col-xs-offset-1 col-xs-10">
+                                Code is not valid!
+                            </div>
                         </div>
                         <div style="margin-bottom:10px;">
                             <input class="form-control" type="text" th:field="*{username}" placeholder="User Name">
@@ -47,9 +50,15 @@
                             <input class="form-control" type="password" th:field="*{matchingPassword}" placeholder="Type Password Again">
                         </div>
                         <div class="error" th:if="*{#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}"></div>
+                        <div style="margin-bottom:10px;">
+                            <input class="form-control" type="text" th:field="*{code}" placeholder="Code">
+                        </div>
+                        <div class="error" th:if="*{#fields.hasErrors('code')}" th:errors="*{code}"></div>
                         <div class="error" th:if="*{#fields.hasErrors('global')}" th:errors="*{global}"></div>
                         <button style="width:80px;" type="submit" class="btn btn-success">Submit</button>
                         <button style="margin-left: 15px;width:80px;" type="reset" class="btn btn-secondary">Reset</button>
+                        <button style="margin-left: 15px;width:80px;" type="button" class="btn btn-secondary"
+                        th:onclick="window.location.href='/login'">Return</button>
                     </form>
                 </div>
             </div>
