--- a/src/main/resources/templates/system/menu.html
+++ b/src/main/resources/templates/system/menu.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>BootStrap</title>
@@ -10,7 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" th:href="@{/css/mycss.css}" />
+
 </head>
 
 <body>
@@ -20,8 +21,12 @@
             <!-- Sidebar Wrapper -->
             <div class="sidenav-header d-flex align-items-center justify-content-center mb-4">
                 <!-- User Info, containing user profile image(click to go to profile) -->
-                <div class="sidenav-header-inner text-center"><a href="#"><img src="img/user_image.jpg"
-                            class="rounded-circle"></a>
+                <div class="sidenav-header-inner text-center">
+                    <form th:action="@{/employee/profile}" method="POST">
+                        <a href="#"><img src="img/user_image.jpg" class="rounded-circle"></a>
+                        <input type="submit" value="Profile" class="btn btn-sm btn-info mt-2" />
+                    </form>
+
                     <!-- User name from database -->
                     <h3>user name</h5><span>Some user info</span>
                 </div>
@@ -79,7 +84,7 @@
                             <!-- Language? -->
 
                             <!-- Logout -->
-                            <li class="nav-item dropdown"><a href="#" class="nav-link logout"><span
+                            <li class="nav-item dropdown"><a th:href="@{/logout}" class=" nav-link logout"><span
                                         class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a>
                             </li>
                         </ul>
