--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -71,7 +71,7 @@
     </header>
 
     <!-- Footer -->
-    <div class=" row footer">
+    <div class="footer">
         <footer id="main-footer" class="bg-dark">
             <div class="container-fluid">
                 <div class="row">
@@ -82,7 +82,7 @@
                         </span>
                     </div>
                     <div class="col-sm-6 text-right">
-                        <p>Version 0.0.1</p>
+                        <p class="d-inline">Version 0.0.1</p>
                     </div>
                 </div>
             </div>
