--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -74,10 +74,10 @@
     <div class="footer">
         <footer id="main-footer" class="bg-dark">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-6 text-left py-2">
+                <div class="row py-2">
+                    <div class="col-sm-6 text-left">
                         <span>
-                        <h6 class="d-inline pl-3">Employee Management &emsp;</h6>
+                        <span class="d-inline pl-3">Employee Management &emsp;</span>
                         Copyright &copy; <span id="year"></span> TYY
                         </span>
                     </div>
