--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#scheduleDropdown" data-toggle="collapse"><i class="fa fa-calendar">Schedule</i></a>
                     <ul id="scheduleDropdown" class="collapse list-unstyled">
-                        <li><a href="#">My Schedule</a></li>
+                        <li><a th:href="@{/employee/my_schedule}">My Schedule</a></li>
                         <li><a href="#">All Employee Schedule</a></li>
                     </ul>
                 </li>
