--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,106 +1,107 @@
 <div th:fragment="template">
-<!-- Side Navbar -->
-<nav class="side-navbar">
-    <div class="side-navbar-wrapper">
-        <!-- Sidebar Wrapper -->
-        <div class="sidenav-header d-flex align-items-center justify-content-center mb-4">
-            <!-- User Info, containing user profile image(click to go to profile) -->
-            <div class="sidenav-header-inner text-center">
+    <!-- Side Navbar -->
+    <nav class="side-navbar">
+        <div class="side-navbar-wrapper">
+            <!-- Sidebar Wrapper -->
+            <div class="sidenav-header d-flex align-items-center justify-content-center mb-4">
+                <!-- User Info, containing user profile image(click to go to profile) -->
+                <div class="sidenav-header-inner text-center">
                     <a th:href="@{/employee/profile}"><img th:src="@{/img/user_image.jpg}" class="rounded-circle"></a>
 
-                <!-- User name from database -->
-                <h3 sec:authentication="name"></h3><span sec:authentication="principal.authorities"></span>
+                    <!-- User name from database -->
+                    <h3 sec:authentication="name"></h3><span sec:authentication="principal.authorities"></span>
+                </div>
+                <div class="sidenav-header-logo"><a href="" class="brand-small text-center"></a></div>
             </div>
-            <div class="sidenav-header-logo"><a href="" class="brand-small text-center"></a></div>
+            <div class="sidenav-menu">
+                <strong class="sidenav-menu-heading mb-5 pb-5">Current Page</strong>
+                <!-- List of functions -->
+                <ul id="side-main-menu" class="side-menu list-unstyled">
+                    <li>
+                        <a href="/"><i class="fa fa-home">Home</i></a>
+                    </li>
+                    <li>
+                        <a href="#scheduleDropdown" data-toggle="collapse"><i class="fa fa-calendar">Schedule</i></a>
+                        <ul id="scheduleDropdown" class="collapse list-unstyled">
+                            <li><a th:href="@{/employee/my_schedule}">My Schedule</a></li>
+                            <li><a href="#">All Employee Schedule</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/show_relation}"><i
+                                class="fa fa-home">Manage Relation</i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="sidenav-menu">
-            <strong class="sidenav-menu-heading mb-5 pb-5">Current Page</strong>
-            <!-- List of functions -->
-            <ul id="side-main-menu" class="side-menu list-unstyled">
-                <li>
-                    <a href="/"><i class="fa fa-home">Home</i></a>
-                </li>
-                <li>
-                    <a href="#scheduleDropdown" data-toggle="collapse"><i class="fa fa-calendar">Schedule</i></a>
-                    <ul id="scheduleDropdown" class="collapse list-unstyled">
-                        <li><a th:href="@{/employee/my_schedule}">My Schedule</a></li>
-                        <li><a href="#">All Employee Schedule</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a sec:authorize="hasAnyRole('ADMIN')" th:href="@{/admin/show_relation}"><i class="fa fa-home">Manage Relation</i></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    </nav>
 
-<!-- Container -->
-<div class="content">
-    <header class="header">
-        <!-- Top Nav Bar -->
-        <nav class="navbar navbar-dark bg-dark p-1">
-            <div class="container-fluid">
-                <div class="navbar-holder d-flex align-items-center justify-content-between">
-                    <div class="navbar-header">
-                        <a id="toggle-btn" href="#" class="menu-btn"><i class="fa fa-amazon"></i></a>
-                        <a href="index.html" class="navbar-brand">
-                        <div class="brand-text d-none d-md-inline-block"><span>Employee </span>
-                            <strong class="text-primary">Management</strong></div>
-                        </a>
-                    </div>
-                    <!--Top nav menu -->
-                    <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                        <!-- Notifications -->
-                        <li class="px-2"><a href=""><i class="fa fa-bell"></i></a></li>
-
-                        <!-- Message -->
-                        <li class="px-2"><a href=""><i class="fa fa-envelope"></i></a></li>
-                        <!-- Language? -->
-
-                        <!-- Logout -->
-                        <li class="nav-item dropdown">
-                            <a th:href="@{/logout}" class=" nav-link logout">
-                            <span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i>
+    <!-- Container -->
+    <div class="content">
+        <header class="header">
+            <!-- Top Nav Bar -->
+            <nav class="navbar navbar-dark bg-dark p-1">
+                <div class="container-fluid">
+                    <div class="navbar-holder d-flex align-items-center justify-content-between">
+                        <div class="navbar-header">
+                            <a id="toggle-btn" href="#" class="menu-btn"><i class="fa fa-amazon"></i></a>
+                            <a href="index.html" class="navbar-brand">
+                                <div class="brand-text d-none d-md-inline-block"><span>Employee </span>
+                                    <strong class="text-primary">Management</strong></div>
                             </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+                        </div>
+                        <!--Top nav menu -->
+                        <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
+                            <!-- Notifications -->
+                            <li class="px-2"><a href=""><i class="fa fa-bell"></i></a></li>
 
-    <!-- Footer -->
-    <div class="footer">
-        <footer id="main-footer" class="bg-dark">
-            <div class="container-fluid">
-                <div class="row py-2">
-                    <div class="col-sm-6 text-left">
-                        <span>
-                        <span class="d-inline pl-3">Employee Management &emsp;</span>
-                        Copyright &copy; <span id="year"></span> TYY
-                        </span>
-                    </div>
-                    <div class="col-sm-6 text-right">
-                        <p class="d-inline">Version 0.0.1</p>
+                            <!-- Message -->
+                            <li class="px-2"><a href=""><i class="fa fa-envelope"></i></a></li>
+                            <!-- Language? -->
+
+                            <!-- Logout -->
+                            <li class="nav-item dropdown">
+                                <a th:href="@{/logout}" class=" nav-link logout">
+                                    <span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </nav>
+        </header>
+
+        <!-- Footer -->
+        <div class="footer">
+            <footer id="main-footer" class="bg-dark">
+                <div class="container-fluid">
+                    <div class="row py-2">
+                        <div class="col-sm-6 text-left">
+                            <span>
+                                <span class="d-inline pl-3">Employee Management &emsp;</span>
+                                Copyright &copy; <span id="year"></span> TYY
+                            </span>
+                        </div>
+                        <div class="col-sm-6 text-right">
+                            <p class="d-inline">Version 0.0.1</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
-</div>
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-<script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
-</script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script>
+        // Get the current year for the copyright
+        $('#year').text(new Date().getFullYear());
+    </script>
 </div>
