--- a/src/main/resources/templates/work_on_template.html
+++ b/src/main/resources/templates/work_on_template.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Template</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- local style.css -->
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/270/270810.svg" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
