--- a/src/main/resources/templates/table-example.html
+++ b/src/main/resources/templates/table-example.html
@@ -83,11 +83,7 @@
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
     <script>
 
-        $('.mydatatable').DataTable({
-            order: [[3, 'desc']],
-            pagingType: 'full_numbers'
-
-        });
+        $('.mydatatable').DataTable();
 
     </script>
 
