--- a/src/main/resources/templates/work_on_template.html
+++ b/src/main/resources/templates/work_on_template.html
@@ -97,25 +97,22 @@
         </header>
 
         <!-- Footer -->
-        <div class="footer">
-            <footer id="main-footer" class="bg-dark">
-                <div class="container-fluid">
-                    <div class="row py-2">
-                        <div class="col-sm-6 text-left">
-                            <div class="row">
-                                <div class="col-sm-6"><span>Employee Management &emsp;</span>
-                                </div>
-                                <div class="col-sm-6"> Copyright &copy; <span id="year"></span> TYY
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 text-right">
-                            <p class="d-inline">Version 0.0.1</p>
-                        </div>
+        <footer class="main-footer">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <p>Employee Management</p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p>TYY &copy; <span id="year"></span></p>
+                    </div>
+                    <div class="col-sm-6 text-right">
+                        <p> Version 0.0.2
+                        </p>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
