--- a/src/main/resources/templates/work_on_template.html
+++ b/src/main/resources/templates/work_on_template.html
@@ -133,7 +133,7 @@
     </script>
 
     <!-- Template js -->
-    <script src="../static/js/template-js.js"></script>
+    <script th:src="@{/js/template-js.js}"></script>
 
 
 </body>
