--- a/src/main/resources/templates/employee/my_schedule.html
+++ b/src/main/resources/templates/employee/my_schedule.html
@@ -13,20 +13,48 @@
 </head>
 
 <body>
-	<div th:replace="template :: template">
-    </div>
-    <div id="content">
-        <table class="table table-bordered table-striped">
-            <thead class ="thead-dark">
-                <tr>
-					<th>Date</th>
-					<th>Time</th>
-                    <th>Location</th>
-                    <th>Description</th>
+    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
+    <div class="content">
+        <div th:replace="/fragements/header_template :: header"></div>
+        <div class="page">
+            <table>
+                <th>N/A</th>
+                <th colspan="2">0</th>
+                <th colspan="2">1</th>
+                <th colspan="2">2</th>
+                <th colspan="2">3</th>
+                <th colspan="2">4</th>
+                <th colspan="2">5</th>
+                <th colspan="2">6</th>
+                <th colspan="2">7</th>
+                <th colspan="2">8</th>
+                <th colspan="2">9</th>
+                <th colspan="2">10</th>
+                <th colspan="2">11</th>
+                <th colspan="2">12</th>
+                <th colspan="2">13</th>
+                <th colspan="2">14</th>
+                <th colspan="2">15</th>
+                <th colspan="2">16</th>
+                <th colspan="2">17</th>
+                <th colspan="2">18</th>
+                <th colspan="2">19</th>
+                <th colspan="2">20</th>
+                <th colspan="2">21</th>
+                <th colspan="2">22</th>
+                <th colspan="2">23</th>
+                <tr th:each="row: ${psdto}">
+                    <td th:text="${row.day}"></td>
+                    <td th:each="col, stat1 : ${row.time}" 
+                    th:style="${col}==1 ? 'background: yellow' : 'background: white'"
+                    th:onclick="${col==1}? 'alert(\'a\')' : '' ">
+                    </td>
                 </tr>
-            </thead>
-        </table>
-	</div>
+            </table>
+        </div>
+        <div th:replace="/fragements/footer_template :: footer"></div>
+    </div>
+
 </body>
 
 </html>
