--- a/src/main/resources/templates/employee/profile.html
+++ b/src/main/resources/templates/employee/profile.html
@@ -15,24 +15,29 @@
 </head>
 
 <body>
-    <div th:replace="template :: template">
+    <div th:replace="/fragements/side_bar_template :: side_bar"></div>
+    <div class="content">
+        <div th:replace="/fragements/header_template :: header"></div>
+        <div id="page">
+            <form th:action="@{/employee/profile/save}" th:object="${employee}" method="POST">
+                <input type="hidden" th:field="*{id}">
+                <input type="hidden" th:field="*{ismanager}">
+                <input class="form-control" type="text" readonly="readonly" th:field="*{lastname}">
+                <input class="form-control" type="text" readonly="readonly" th:field="*{firstname}">
+                <input class="form-control" type="text" th:field="*{phone}" placeholder="Phone">
+                <div class="error" th:if="*{#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
+                <input class="form-control" type="text" th:field="*{email}" placeholder="Email">
+                <div class="error" th:if="*{#fields.hasErrors('email')}" th:errors="*{email}"></div>
+                <input class="form-control" type="text" readonly="readonly" th:field="*{username}">
+                <input type="submit" value="Update" class="btn btn-info mt-2">
+                <button style="margin-left: 10px;width:80px;" type="button" class="btn btn-secondary mt-2"
+                th:onclick="window.location.href='/'">Return</button>
+            </form>
+        </div>
+        <div th:replace="/fragements/footer_template :: footer"></div>
     </div>
-    <div id="content">
-        <form th:action="@{/employee/profile/save}" th:object="${employee}" method="POST">
-            <input type="hidden" th:field="*{id}">
-            <input type="hidden" th:field="*{ismanager}">
-            <input class="form-control" type="text" readonly="readonly" th:field="*{lastname}">
-            <input class="form-control" type="text" readonly="readonly" th:field="*{firstname}">
-            <input class="form-control" type="text" th:field="*{phone}" placeholder="Phone">
-            <div class="error" th:if="*{#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
-            <input class="form-control" type="text" th:field="*{email}" placeholder="Email">
-            <div class="error" th:if="*{#fields.hasErrors('email')}" th:errors="*{email}"></div>
-            <input class="form-control" type="text" readonly="readonly" th:field="*{username}">
-            <input type="submit" value="Update" class="btn btn-info mt-2">
-            <button style="margin-left: 10px;width:80px;" type="button" class="btn btn-secondary mt-2"
-            th:onclick="window.location.href='/'">Return</button>
-        </form>
-    </div>
+
+
 </body>
 
 </html>
