--- a/src/main/resources/templates/work_on_template.html
+++ b/src/main/resources/templates/work_on_template.html
@@ -96,6 +96,15 @@
             </nav>
         </header>
 
+
+        asdf
+
+
+
+
+        <div style="margin-top:2600px;"></div>
+        end
+
         <!-- Footer -->
         <footer class="main-footer">
             <div class="container-fluid">
@@ -130,7 +139,8 @@
     </script>
 
     <!-- Template js -->
-    <script th:src="@{/js/template-js.js}"></script>
+    <!-- <script th:src="@{/js/template-js.js}"></script> -->
+    <script src="../static/js/template-js.js"></script>
 
 
 </body>
