--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -406,6 +406,43 @@ body{
     color:wheat;
 }
 
+/*
+    Content
+*/
+
+.content{
+    position: absolute;
+    top: 0;
+    right: 0;
+    -webkit-transition: width 0.3s linear;
+    transition: width 0.3s linear;
+    width: calc(100% - 200px);
+    background-color: #F4F7FA;
+    min-height: 100vh;
+    padding-bottom: 50px;
+}
+
+.content.active {
+    width: calc(100% - 70px);
+  }
+
+
+.page{
+    width:100%;
+    height:85%;
+    position: absolute;
+    top:3rem;
+    right:0;
+}
+.page a{
+    text-decoration: none;
+}
+
+
+.error{
+  color:red;
+}
+
 /* 
   Responsive
 */
@@ -500,39 +537,5 @@ body{
   }
 }
 
-/*
-    Content
-*/
-
-.content{
-    position: absolute;
-    top: 0;
-    right: 0;
-    -webkit-transition: width 0.3s linear;
-    transition: width 0.3s linear;
-    width: calc(100% - 200px);
-    background-color: #F4F7FA;
-    height: 100%;
-    padding-bottom: 50px;
-}
-
-.content.active {
-    width: calc(100% - 70px);
-  }
 
 
-.page{
-    width:100%;
-    height:85%;
-    position: absolute;
-    top:3rem;
-    right:0;
-}
-.page a{
-    text-decoration: none;
-}
-
-
-.error{
-  color:red;
-}
