--- a/src/main/resources/templates/work-on/work_on_template.html
+++ b/src/main/resources/templates/work-on/work_on_template.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- local style.css -->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/270/270810.svg" />
 
     <!-- Bootstrap CSS -->
