--- a/src/main/resources/templates/admin/add_employee.html
+++ b/src/main/resources/templates/admin/add_employee.html
@@ -48,12 +48,7 @@
 					</select>
 				</div>
 				<div class="error" th:if="*{#fields.hasErrors('username')}" th:errors="*{username}"></div>
-				<div style="margin-bottom:10px;">
-					<select style="width:100%" th:field="*{ismanager}">
-						<option th:text="Manager" th:value="1"></option>
-						<option th:text="Employee" th:value="0"></option>
-					</select>
-				</div>
+				<input type="hidden" th:field="*{ismanager}">
 				<button th:if="*{#fields.hasErrors()}" class="btn btn-info col-2" type="button" onclick="javascript:history.go(-1);">Back</button>
 				<button th:if="!*{#fields.hasErrors()}" class="btn btn-info col-2" type="submit">Add or Update</button>
                 <button class="btn btn-info col-2" type="button" onclick="window.location.href='/manager/show_employee_list'">Return</button>
